--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tox = "^3.25.1"
 click = "^8.1.3"
 importlib = "^1.0.4"
 oaklib = "^0.1"
+OGER = "^1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
