--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,14 @@ oaklib = "^0.1"
 OGER = "^1.5"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.2"
+pytest = "^7.1.3"
 Sphinx = "^5.1.1"
 sphinx-rtd-theme = "^1.0.0"
 sphinx-autodoc-typehints = "^1.19.2"
 sphinx-click = "^4.3.0"
 
 [tool.poetry.scripts]
-oakx-oger = "oakx_oger.cli:main"
+oakger = "oakx_oger.cli:main"
 
 [tool.poetry.plugins."oaklib.plugins"]
 oger = "oakx_oger.oger_implementation:OGERImplementation"
@@ -37,13 +37,13 @@ docs = [
     ]
 
 [tool.black]
-line-length = 100
+line-length = 79
 target-version = ["py38", "py39", "py310"]
 
 [tool.isort]
 profile = "black"
 multi_line_output = 3
-line_length = 100
+line_length = 79
 include_trailing_comma = true
 reverse_relative = true
 
