--- a/tox.ini
+++ b/tox.ini
@@ -77,6 +77,7 @@ ignore =
     DAR301 # Missing "Yields" in Docstring: - yield
     E111 # indentation is not a multiple of 4
     T201 # print found.
+    W503 # line break before binary operator
 
 [testenv:mypy]
 deps = mypy
