--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ tox = "^3.25.1"
 click = "^8.1.3"
 importlib = "^1.0.4"
 oaklib = "^0.1"
-OGER = "^1.5"
+sphinx = {version = "^5.3.0", extras = ["docs"]}
+sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
+sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
+sphinx-click = {version = "^4.3.0", extras = ["docs"]}
+myst-parser = {version = "^0.18.1", extras = ["docs"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
@@ -34,6 +38,7 @@ docs = [
     "sphinx-rtd-theme",
     "sphinx-autodoc-typehints",
     "sphinx-click",
+    "myst-parser",
     ]
 
 [tool.black]
