--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ license = "BSD 3"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 setuptools = "^65.0.1"
 tox = "^3.25.1"
 click = "^8.1.3"
 importlib = "^1.0.4"
-oaklib = "^0.1"
+oaklib = "^0.1.49"
+OGER = "^1.5"
 sphinx = {version = "^5.3.0", extras = ["docs"]}
 sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
 sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
