--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
 sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
 sphinx-click = {version = "^4.3.0", extras = ["docs"]}
 myst-parser = {version = "^0.18.1", extras = ["docs"]}
+pystow = "^0.4.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
