--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,11 @@ docs = [
     "myst-parser",
     ]
 
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "pep440"
+
 [tool.black]
 line-length = 79
 target-version = ["py38", "py39", "py310"]
@@ -48,5 +53,5 @@ include_trailing_comma = true
 reverse_relative = true
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
